# dspalchemy

./: .gitignore  .pylintrc  requirements.txt  setup.cfg
.github/workflows/: formatter.yml  mypy.yml  pylint.yml  pytest.yml
dspalchemy/: LICENSE.MD  Readme.md  setup.py
dspalchemy/.github/workflows/: formatter.yml  publish.yml  pytest.yml
dspalchemy/dspalchemy/frame/: data_model.py
dspalchemy/dspalchemy/types/: dynamic.py  static.py
dspalchemy/frame/: data_model.py  utils.py
dspalchemy/types/: dynamic.py  static.py  utils.py
tests/: test_dynamic_lookup.py  test_frame.py  test_joins.py  test_joins_and_concatenation.py  test_static_dtypes.py
