[metadata]
name = dspalchemy
version = 0.0.2
description = Vision
license = License Name
platforms =windows
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: Ubuntu
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    matplotlib==3.8.0
    pandas==1.5.3
    pydantic==2.5.3
    pydantic_core==2.14.6
    ; for testing
    pytest>=7.4.4
    pytest-cov>=4.1.0

[options.package_data]
vision = py.typed

[tool.black]
line-length = 100
